# MoodleUFOP

./: LICENSE  Main.hs  MoodleUFOP.cabal  README.md
app/: Alunos.hs  Disciplinas.hs  Main.hs  Transformações.hs
