name:                MoodleUFOP
version:             0.1.0.0
synopsis:            Transforma arquivos CSV do MinhaUFOP para carga no Moodle.
description:         Leia o README.md.
homepage:            http://github.com/glauberMonitoriaDECSI/MoodleUFOP#readme
license:             BSD3
license-file:        LICENSE
author:              Glauber M. Cabral
maintainer:          glauber@decsi.ufop.br
copyright:           2015 Glauber M. Cabral
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.20

--library
--  hs-source-dirs:      src
--  exposed-modules:     Lib
--  build-depends:       base >= 4.7 && < 5
--  default-language:    Haskell2010

executable moodleUFOP
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       bytestring,
                       vector,
                       cassava,
                       split,
                       text,
                       optparse-applicative
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , MoodleUFOP
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/glauberMonitoriaDECSI/MoodleUFOP

